adding new env variables

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 DAGS_REPO=https://github.com/insight-icon/icon-etl-airflow
-#DAGS_REPO=https://github.com/robcxyz/icon-etl-airflow
 #DAGS_REPO_BRANCH=git-sync-fix
+
+AWS_ACCESS_KEY_ID=XXXXXXXXXXXXXXXXXXXXXX
+AWS_SECRET_ACCESS_KEY=XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
